# gcodekit2

./: AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SPEC.md  STATS.md  build.rs
docs/: IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PLAN.md  MASTER_IMPLEMENTATION_PLAN.md  PHASE_14_COMPLETE.md  PHASE_14_COMPLETION.md  PHASE_2_IMPLEMENTATION_DETAILED.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_SESSION_SUMMARY.md  SESSION_SUMMARY_2025_10_19.md  TASK_10_WEB_PENDANT.md  TASK_14_IMPLEMENTATION.md  THEME_IMPLEMENTATION_PLAN.md  THEME_SYSTEM.md  THEME_TASKS.md
src/: console_logger.rs  lib.rs  main.rs  ui_theme.rs
src/communication/: grbl.rs  mod.rs  serial.rs
src/designer/: backplot.rs  imaging.rs  mod.rs  optimizer.rs  shapes.rs  toolpath.rs  validator.rs
src/jobs/: mod.rs
src/materials/: mod.rs  speeds_feeds.rs
src/pendant/: api.rs  mod.rs  server.rs  ui.rs  ui_client.js  ui_styles.css  ui_template.html  ws.rs
src/theme/: detector.rs  manager.rs  mod.rs  palette.rs  storage.rs
src/widgets/: connection.rs  gcode_loading.rs  jog.rs  mod.rs  overrides.rs
tests/: lib.rs
tests/communication/: mod.rs
tests/designer/: backplot.rs  imaging.rs  mod.rs  optimizer.rs  validator.rs
tests/jobs/: mod.rs
tests/materials/: mod.rs
tests/pendant/: mod.rs
tests/theme/: mod.rs
tests/widgets/: mod.rs
ui/: app.slint  settings-panel.slint  theme-provider.slint
ui/panels/: center-panel.slint  left-panel.slint  right-panel.slint  settings-panel.slint
ui/widgets/: connection-panel.slint  custom-tab-widget.slint  device-console.slint  (+3 more)
