[package]
name = "gcodekit2"
version = "0.2.0-alpha"
edition = "2021"

[dependencies]
slint = "1.13.1"
serialport = "4.2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
usvg = "0.37"
dxf = "0.4"
lyon = "1.0"
image = "0.24"
thiserror = "1.0"
crossterm = "0.27"
dirs = "5.0"
tempfile = "3.8"

# Platform-specific theme detection
[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"

[build-dependencies]
slint-build = "1.13.1"

[profile.release]
opt-level = 3
lto = true
